add hive schema in path

--- a/examples/hdfs_example.conf
+++ b/examples/hdfs_example.conf
@@ -50,9 +50,10 @@ flush_streaming=yes
 type=file
 fs_type=hdfs
 file_path=/scribealex
+hive_schema=myaa.db
 create_symlink=no
 use_hostname_sub_directory=no
-sub_directory=mydemo
+#sub_directory=mydemo
 #base_filename=mytestfilename
 max_size=1000000000
 rotate_period=hourly
