add date substring switch option 'date_on'

--- a/examples/hdfs_example.conf
+++ b/examples/hdfs_example.conf
@@ -51,6 +51,7 @@ type=file
 fs_type=hdfs
 file_path=/scribealex
 hive_schema=myaa.db
+date_on=yes
 create_symlink=no
 use_hostname_sub_directory=no
 #sub_directory=mydemo
